updates to deploy to heroku

--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
-  "name": "shopping-cart",
+  "name": "heroku-test",
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
-    "test": "ng test"
+    "test": "ng test",
+    "heroku-postbuild": "ng build — prod"
   },
   "private": true,
   "dependencies": {
@@ -20,7 +21,10 @@
     "@angular/router": "~12.0.4",
     "rxjs": "~6.6.0",
     "tslib": "^2.1.0",
-    "zone.js": "~0.11.4"
+    "zone.js": "~0.11.4",
+    "@angular/cli": "~12.0.4",
+    "@angular/compiler-cli": "~12.0.4",
+    "typescript": "~4.2.3"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~12.0.4",
@@ -36,4 +40,9 @@
     "karma-jasmine-html-reporter": "^1.5.0",
     "typescript": "~4.2.3"
   }
+,
+"engines": {
+  "node": "14.17.0",
+    "npm": "7.17.0"
+}
 }
