--- a/package.json
+++ b/package.json
@@ -12,19 +12,20 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "~12.0.4",
+    "@angular/cli": "~12.0.4",
     "@angular/common": "~12.0.4",
     "@angular/compiler": "~12.0.4",
+    "@angular/compiler-cli": "~12.0.4",
     "@angular/core": "~12.0.4",
     "@angular/forms": "~12.0.4",
     "@angular/platform-browser": "~12.0.4",
     "@angular/platform-browser-dynamic": "~12.0.4",
     "@angular/router": "~12.0.4",
+    "express": "^4.18.1",
     "rxjs": "~6.6.0",
     "tslib": "^2.1.0",
-    "zone.js": "~0.11.4",
-    "@angular/cli": "~12.0.4",
-    "@angular/compiler-cli": "~12.0.4",
-    "typescript": "~4.2.3"
+    "typescript": "~4.2.3",
+    "zone.js": "~0.11.4"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~12.0.4",
@@ -39,10 +40,9 @@
     "karma-jasmine": "~4.0.0",
     "karma-jasmine-html-reporter": "^1.5.0",
     "typescript": "~4.2.3"
-  }
-,
-"engines": {
-  "node": "14.17.0",
+  },
+  "engines": {
+    "node": "14.17.0",
     "npm": "7.17.0"
-}
+  }
 }
